--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -251,8 +251,7 @@
         </div>
     
     <div class="footer">
-      <h2>Done by Almas &#9829 </h2>
-      <p><a href="https://www.shaikalmas105@gmail.com" target="_blank">shaikalmas105@gmail.com</a></p>
+      <h2>Done by Yash </h2>
     </div>
   </body>
 </html>
